style.css
/* ... */
/*- Various Tags and Classes */

.clear {
	clear: both;
	margin: 0;
	padding: 0;
	}

#primary .entry-content img {
	margin: 0 5px;
	padding: 4px;
	border: 1px solid #ccc;
	max-width: 100%;
	}

#primary table img {
	max-width: none;
	}

.center {
	text-align: center;
	}

.alignright {
	float: right;
	}
	
.alignleft {
	float: left
	}

img.center, img[align="center"] {
	display: block;
	margin-left: auto;
	margin-right: auto;
	}
	
img.alignright, img[align="right"] {
	padding: 4px !important;
	margin: 0 0 2px 7px !important;
	display: inline;
	}

img.alignleft, img[align="left"] {
	padding: 4px;
	margin: 0 7px 2px 0;
	display: inline;
	}
	
img.noborder {
	border: none !important;
	}

small {
	font-size: 0.9em;
	line-height: 1.5em;
	}

small, strike {
	color: #777;
	}
	
code {
	font: 1.1em 'Courier New', Courier, Monospace;
	}

.chronodata abbr { border: 0; }

blockquote {
	margin: 20px 0;
	padding: 0 20px 0 50px;
	color: #333;
	background: url('images/quote.png') no-repeat 10px 0;
	border: none;
	}

hr {
	display: none;
	}

.navigation {
	text-align: center;
	margin: 10px 0;
	padding: 0;
	width: 100%;
	}

.comments .navigation {
	margin: 10px 0;
	}

.navigation .left {
	float: left;
	width: 50%;
	text-align: left;
	}

.navigation .right {
	float: right;
	width: 50%;
	text-align: right;
	}

.navigation p {
	margin: 0;
	padding: 0;
	}

.navigation a {
	color: #999;
	}

.alert {
	background: #FFF6BF;
	border-top: 2px solid #FFD324;
	border-bottom: 2px solid #FFD324;
	text-align: center;
	margin: 10px auto;
	padding: 5px 20px;
	}

img.wp-smiley {
	border: none !important;
	padding: 0 0 0 5px !important;
	}

/*- Begin Lists */
.archive-list {
	list-style: none;
	margin: 10px 0 0 0 !important;
	padding-left: 0px !important;
	}

.archive-list li {
	display: block;
	float: left;
	margin: 0 10px 0 0 !important;
	padding: 2px 0 2px 10px !important;
	width: 150px;
	}

.archive-list li:hover {
	background-color: #EDEDED;
	}

.entry-content ol, .entry-content ul {
	padding: 0 0 0 35px;
	}

.entry-content ol li, .entry-content ul li {
	margin: 0 0 3px;
	padding: 0;
	}

.secondary div p {
	margin-top: 0.5em;
	}

.secondary ul, .secondary ol, .secondary div div {
	margin: 5px 0 0;
	padding-left: 0;
	}

.secondary ol {
	margin-left: 15px;
	}

.secondary ul li, .secondary ol li {
	margin: 0;
	padding: 1px 0;
	}
	
.secondary ul li {
	list-style-type: none;
	list-style-image: none;
	}

ol li {
	list-style: decimal outside;
	}

.sb-links ul li {
	margin-top: 20px;
	}

.sb-links ul ul li {
	margin-top: 0;
	}

/*- Search Form and Livesearch */

#searchform {
	margin-top: 20px;
	display: block;
	position: relative;
	}

#search h2 {
	display: none;
	}

input[type=text], textarea {
	color: #444;
	padding: 1px;
	margin: 0;
	}

#s {
	width: 79%;
	}

#s.livesearch {
	width: 89%;
	}

#searchreset {
	position: absolute;
	right: 3px;
	top: 3px;
	height: 13px;
	width: 13px;
	background: url('images/reset-fff.png') center center no-repeat;
	}

#searchload {
	position: absolute;
	right: 0;
	top: 0;
	height: 18px;
	width: 18px;
	background: url('images/spinner.gif') center center no-repeat;
	}

.livesearchform input[type=submit] {
	margin: 0;
	}

#searchcontrols {
	text-align: center;
	padding: 1px;
	background: #ddd url('images/livesearchbgdark.jpg') center repeat-y;
	}

#searchcontrols small {
	margin: 0;
	padding: 0;
	}

/*- Attachment */
.entry-content .attachment { 
	text-align: center; 
	}

/* CSS Beyond this point is for various supported plugins and not the 'core' K2 template */


/*-
	Brian's Latest Comments
	http://meidell.dk/archives/2004/09/12/brians-latest-comments/
*/
.sb-comments-blc ul li span a, .sb-comments-blc ul li small a {
	color: #999;
	font-weight: normal;
	word-spacing: -1px;
	}

.sb-comments-blc ul li {
	margin-bottom: 6px;
}

.sb-comments-blc ul li > a[title="Go to the comments of this entry"] {
	position: absolute;
	right:0;
	color: #999;
}

.activityentry {
	font-size: 1.1em;
	}

div#latest-comments small {
	display: block;
	margin: 0;
	font-weight: normal;
	line-height: 1em;
	}


/*-
	FlickrRSS
*/

.sb-flickr div img {
	border: 0px;
	padding: 5px;
}

.sb-flickr div a img {
	border: 1px solid #ccc;
	padding: 3px;
	margin: 5px 3px 0;
}

.sb-flickr div a:hover img {
	border: 1px solid #999;
}

/*-
	WordPress: Touched
	http://twilightuniverse.com/2005/03/wordpress-touched/
	
	No support for Touched 0.6 in the rest of K2.
	Seems a bit flaky just now. Waiting for new version.
*/

#poststuff fieldset {
	border: none;
	}

#poststuff #title, #poststuff #excerpt, #poststuff #tags {
	width: 470px;
	}
	
#poststuff #title {
	font-size: 2em;
	}

/*
	Ultimate Tag Warrior
	K2 removes UTW's default tags for more default control.
*/

.localtags, .technoratitags {
	display: none;
	}

/*
	Contact Form
*/

.contactform {
	width: 100%; 
	position: relative;
	}

.contactleft {
	width: 15%; 
	text-align: right;
	clear: both; 
	float: left; 
	display: inline; 
	padding: 4px; 
	margin: 5px 0; 
	}

.contactright {
	width: 70%; 
	text-align: left;
	float: right; 
	display: inline; 
	padding: 4px; 
	margin: 5px 0; 
	}
	
.contacterror {
	border: 1px solid #ff0000;
	}

/* Noteworthy */
.category-noteworthy h3.entry-title {
	background: url('images/heart.png') no-repeat right center;
	padding-right: 25px;
	display: inline;
}

.noteworthyLink { margin-left: 5px }

/* Peace and forgiveness */
/* Learn more about the other K2: http://en.wikipedia.org/wiki/K2 */

